package pl.lodz.p.it.expenseTracker.domain.enums;

public enum PeriodUnitEnum {

    DAY,
    MONTH,
    YEAR;
}